upgrade plugins and address compiler issues